# websocket

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  vix.json
.github/workflows/: websocket-strict-ci.yml
docs/: CLIENT_GUIDE.md  EXAMPLES.md  LONGPOLLING.md  TECHNICAL.md  vix_websocket_examples.md
examples/: CMakeLists.txt  chat_room.cpp  simple_client.cpp  simple_server.cpp
examples/01_minimal_ws/: .env.example  README.md  main.cpp
examples/02_http_ws_basic/: README.md  main.cpp
examples/03_chat_rooms/: README.md  main.cpp
examples/04_chat_persistent/: README.md  main.cpp
examples/05_chat_long_polling/: README.md  main.cpp
examples/06_metrics_runtime/: README.md  main.cpp
examples/07_client_runtime/: README.md  main.cpp
examples/08_realtime_dashboard/: .env.example  README.md  main.cpp
examples/08_realtime_dashboard/public/: app.css  app.js  index.html
examples/advanced/: CMakeLists.txt  advanced_chat.html
examples/advanced/config/: config.json
examples/advanced/src/: client.cpp  server.cpp
examples/public/: app.js
examples/simple/: CMakeLists.txt
examples/simple/public/: app.js  index.html  style.css
examples/simple/src/: app_example.cpp  index.html  minimal_ws_server.cpp  simple_client.cpp  simple_server.cpp
examples/src/: main.cpp  ws_client.cpp
include/vix/: websocket.hpp
include/vix/websocket/: App.hpp  AttachedRuntime.hpp  HttpApi.hpp  LongPolling.hpp  LongPollingBridge.hpp  MessageStore.hpp  Metrics.hpp  Runtime.hpp  SqliteMessageStore.hpp  client.hpp  config.hpp  openapi_docs.hpp  protocol.hpp  router.hpp  server.hpp  session.hpp  simple_client.hpp  simple_server.hpp  websocket.hpp
scripts/: changelog-release.sh  update_changelog.sh
src/: App.cpp  HttpApi.cpp  LongPolling.cpp  LongPollingBridge.cpp  MessageStore.cpp  Metrics.cpp  SqliteMessageStore.cpp  client.cpp  config.cpp  main.cpp  protocol.cpp  router.cpp  server.cpp  session.cpp  websocket.cpp
tests/: CMakeLists.txt  websocket_disconnect_tests.cpp
